--- a/views/compras.html
+++ b/views/compras.html
@@ -19,6 +19,16 @@
 
     <div class="container" id="content">
         <br>
+        <!--Spinner div -->
+        <div class="visible" id="spinner">
+            <br><br><br><br><br><br><br><br><br><br>
+
+            <div class="loader"></div>
+            <br><br><br><br><br><br><br><br><br><br>
+
+
+        </div>
+        <!--Spinner div-->
         <div id="navbar"></div>
         <div id="tabela">
 
@@ -64,9 +74,9 @@
     <!--THIS IS PART OF THE CODE CAN BE CUSTOMIZED -->
 
     <script type="module" src="../js/generators/navbarCompras.js"></script> <!--Change in every view -->
-    <script type="module" src="../js/data/getEstoque.js"></script><!--Change in every view -->
+    <script type="module" src="../js/data/getCompras.js"></script><!--Change in every view -->
     <script type="module" src="../js/src/router.js"></script> <!--Change the router link -->
-    <script type="module" src="./estoque.js"></script> <!--Change in every view-->
+    <script type="module" src="./compras.js"></script> <!--Change in every view-->
 
 
 </body>
