--- a/views/formulas.html
+++ b/views/formulas.html
@@ -17,6 +17,16 @@
 
     <div class="container" id="content"> <!--Here lives the page's content-->
         <br>
+            <!--Spinner div -->
+            <div class="visible" id="spinner">
+                <br><br><br><br><br><br><br><br><br><br>
+            
+                <div class="loader"></div>
+                <br><br><br><br><br><br><br><br><br><br>
+            
+            
+            </div>
+            <!--Spinner div-->
         <div id="navbar"></div> <!--navbar-->
         <div id="tabela"></div> <!--table component-->
 
