--- a/views/farmacia.html
+++ b/views/farmacia.html
@@ -19,6 +19,16 @@
 
     <div class="container" id="content">
         <br>
+            <!--Spinner div -->
+            <div class="visible" id="spinner">
+                <br><br><br><br><br><br><br><br><br><br>
+            
+                <div class="loader"></div>
+                <br><br><br><br><br><br><br><br><br><br>
+            
+            
+            </div>
+            <!--Spinner div-->
         <div id="navbar"></div>
         <div id="tabela">
 
